Login functionality implemented

--- a/food/templates/form.html
+++ b/food/templates/form.html
@@ -3,6 +3,7 @@
 <head>
     <title>Register</title>
     <link rel="stylesheet" type="text/css" href="/site_media/css/styles.css">
+	<link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 </head>
 <body id="css-zen-garden">
 <div class="page-wrapper">
