--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Economica:400,700|Montserrat:400,700);
+
 .niceform dl { clear: left;margin: 0; }
 
 .niceform dt { float: left;text-align: right;width: 200px;line-height: 25px;margin: 0 10px 10px 0; }
@@ -29,6 +31,14 @@
     border-bottom: 6px solid transparent;
 }
 
+.messages { border:1px solid #C8DCC2; margin:1em 0;}
+.messages ul .debug{ background: #EEFAEA; padding: 0.5em, 0 0.5em 0; list-style: none;}
+.messages ul .info{ background: #EEFAEA; padding: 0.5em, 0 0.5em 0; list-style: none;}
+.messages ul .success{ background: #EEFAEA; padding: 0.5em, 0 0.5em 0; list-style: none;}
+.messages ul .warning{ background: #FF3333; padding: 0.5em, 0 0.5em 0; list-style: none;}
+.messages ul .error{ background: #FF3333; padding: 5px, 0 5px 0; list-style: none;}
+.messages ul li { background: none; padding-left: 5px; padding-top: 8px; padding-bottom: 8px;font-size: 1.2em;}
+
 /* css Zen Garden default style v1.02 */
 /* css released under Creative Commons License - http://creativecommons.org/licenses/by-nc-sa/1.0/  */
 
@@ -45,12 +55,7 @@ html {
 	padding: 0;
 	}
 body { 
-	font: 75% georgia, sans-serif;
-	line-height: 1.88889;
-	color: #555753; 
-	background: #fff url() no-repeat center; 
-	margin: 0; 
-	padding: 0;
+
 	}
 p { 
 	margin-top: 0; 
@@ -84,7 +89,7 @@ abbr {
 /* specific divs */
 .page-wrapper { 
 	background: url(/site_media/img/banner3.jpg) no-repeat;
-	
+	background-position:center;
 	}
 
 .intro { 
@@ -92,8 +97,17 @@ abbr {
 	width: 100%;
 	}
 
+h1 {
+	font-family: 'Montserrat', sans-serif;
+	font-size:1000%;
+	text-align:justify;
+	margin-left:17%;
+	color: #7D775C;
+}
+
+	
 header h1 { 
-	background: transparent url(h1.gif) no-repeat top left;
+	/*background: transparent url(h1.gif) no-repeat top left;*/
 	margin-top: 10px;
 	display: block;
 	width: 219px;
@@ -105,7 +119,7 @@ header h1 {
 	overflow: hidden;
 	}
 header h2 { 
-	background: transparent url(h2.gif) no-repeat top left; 
+	/*background: transparent url(h2.gif) no-repeat top left; */
 	margin-top: 58px; 
 	margin-bottom: 40px; 
 	width: 200px; 
@@ -122,14 +136,12 @@ header {
 }
 
 .summary {
-	clear: both; 
-	margin: 20px 20px 400px 10px; 
-	width: 50%; 
-	float: left;
+	position:absolute;
 	border-style:solid;
 	border-width:1px;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	top: 25%;
+    left: 30%;
+	width: 35%;
 	}
 .summary p {
 	font: italic 1.1em/2.2 georgia; 
@@ -144,7 +156,14 @@ header {
 	padding-left: 10px; 
 	margin-bottom: 40px;
 	}
-
+	
+.loginbox {
+	position:absolute;
+	top: 52%;
+    left: 42%;
+	width:100%;
+	}
+	
 footer { 
 	text-align: center; 
 	}
@@ -225,3 +244,28 @@ footer a:link, footer a:visited {
 	width: 148px; 
 	height: 110px;
 	}
+	
+@font-face
+{
+font-family: caviar-font;
+src: url(/site_media/fonts/CaviarDreams.ttf);
+}
+
+.line {
+  width:50px;
+  border-right:1px solid black;
+  box-shadow: rgba(255,255,255,0.8) 1px 0px 0px;
+}
+
+.errorMessage {
+  float:center;
+  width:20%;
+  background-color:#660000;
+  color:white;
+  border-right:1px solid black;
+  box-shadow: rgba(255,255,255,0.8) 1px 0px 0px;
+  margin-left:36%;
+  margin-top:15%;
+  font-family: 'Montserrat', sans-serif;
+  font-size:80%;
+}
