--- a/food/templates/insert.html
+++ b/food/templates/insert.html
@@ -1,25 +1,25 @@
+<!DOCTYPE html>
 <html>
-	<img src = "http://brandcrowd.com/gallery/brands/pictures/picture13244692529250.jpg" width="400" height="300">
-	<body style="text-align:center;">
-		<fieldset class="blockCenter" style="width: 30em; margin-top: 1em; margin-left: 35em;" >
-			<h1>Lets Create a FOODING Event</h1><br /><br />
-			<h3>
-				<form name ="input" method = "get" action ="/mng/retrieveCC">
-					<!--<tr>Title:<input type="text" name="title" /></tr><br /><br />
-					<tr>Description:<input type="text" name="description" /></tr><br /><br />
-					<tr><select name = "airlines" method = "get">
-					<option value="Dinner">Dinner</option>
-					<option value="Lunch">Lunch</option>
-					<option value="Drinks">Drinks</option>
-					</select></tr>
-					<br /><br />
-					<input type="submit" value="Create" /><br /><br />
-				</form>-->
+<head>
+    <title>Fooding Dashboard</title>
+    <link rel="stylesheet" type="text/css" href="/site_media/css/styles.css">
+</head>
+<body id="css-zen-garden">
+<div class="page-wrapper">
 
-				<br /><br />
+	<section class="intro" id="zen-intro">
+		<header role="banner">
+			<h1>CSS Zen Garden</h1>
+			<div class="user_panel">
+				<a href="/logout/">Logout</a>
+			</div>
+		</header>
+		</div>	
+	</section>
+	
+</div>
 
-				<a href = "/fooding/indexview">Home Page </a><br /><br />
-			</h3>
-		</fieldset>
-	</body>
+<h2> Hello {{ firstname }} {{ lastname }}! Welcome to the Fooding Dashboard </h2>
+
+</body>
 </html>
