--- a/food/templates/insert.html
+++ b/food/templates/insert.html
@@ -9,7 +9,7 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>CSS Zen Garden</h1>
+			<h1></h1>
 			<div class="user_panel">
 				<a href="/logout/">Logout</a>
 			</div>
@@ -18,8 +18,47 @@
 	</section>
 	
 </div>
-
+<div class = "welcomeHeader">
 <h2> Hello {{ firstname }} {{ lastname }}! Welcome to the Fooding Dashboard </h2>
-
+</div>
+<div class ="displayEvents">
+<p> Your events : </p>
+<ul>
+{% for event in events %}
+    <li>on {{ event.dateOfEvent }} : {{ event.title }} - {{event.description}}</li>
+{% endfor %}
+</ul>
+</div>
+<div class="createEvent">
+	<h2> Create an Event </h2>
+    <form id="createEvent" action="{% url food.views.createEvent %}" method="post" class="niceform" novalidate>{% csrf_token %}
+        <dl>
+            <dt> Title : </dt>
+            <dd>{{ form.title }}</dd>
+            <!--<dd>{{ form.title.errors }}</dd>-->
+        </dl>
+        <dl>
+            <dt> Description : </dt>
+            <dd>{{ form.description }}</dd>
+            <!--<dd>{{ form.description.errors }}</dd>-->
+        </dl>
+		<dl>
+            <dt> Date : </dt>
+            <dd>{{ form.date }}</dd>
+            <!--<dd>{{ form.date.errors }}</dd>-->
+        </dl>
+        <br>
+		<br>
+		<br>
+		<dl>
+			<dd></dd>
+			<dd>
+			<div class="registerButtons">
+				<input type="submit" value="Create Event" class="button" />
+			</div>
+			</dd>
+		</dl>
+    </form>
+</div>
 </body>
 </html>
