--- a/food/templates/insert.html
+++ b/food/templates/insert.html
@@ -20,6 +20,20 @@
 		});
 	  });
 	</script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>-->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmKq0adRXY9Qswr-G8whkRWUlC7uhI8ds&sensor=SET_TO_TRUE_OR_FALSE" type="text/javascript"></script>
+    <script>
+      function initialize() {
+        var map_canvas = document.getElementById('map_canvas');
+        var map_options = {
+          center: new google.maps.LatLng(44.5403, -78.5463),
+          zoom: 8,
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        }
+        var map = new google.maps.Map(map_canvas, map_options)
+      }
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
 </head>
 <body id="css-zen-garden">
 <div class="page-wrapper">
@@ -42,15 +56,15 @@
 <p> Your events : </p>
 <ul>
 {% for event in events %}
-    <li>on {{ event.dateOfEvent }} : {{ event.title }} - {{event.description}}</li>
-    <td><a href="{% url "food.views.viewEvent" event_id=event.pk %}">See Event</a></td>
-	<td><a href="{% url "food.views.deleteEvent" event_id=event.pk %}">Delete</a></td>
+    <li>on {{ event.dateOfEvent }} : {{ event.title }} - {{event.description}} - {{event.address}}</li>
+    <td><a href="{% url food.views.viewEvent event_id=event.pk %}">See Event</a></td>
+	<td><a href="{% url food.views.deleteEvent event_id=event.pk %}">Delete</a></td>
 {% endfor %}
 </ul>
 </div>
 <div class="createEvent">
 	<h2> Create an Event </h2>
-    <form id="createEvent" action="{% url "food.views.createEvent" %}" method="post" class="niceform" novalidate>{% csrf_token %}
+    <form id="createEvent" action="{% url food.views.createEvent %}" method="post" class="niceform" novalidate>{% csrf_token %}
         <dl>
             <dt> Title : </dt>
             <dd>{{ form.title }}</dd>
@@ -65,6 +79,11 @@
             <dt> Date : </dt>
             <dd>{{ form.date }}</dd>
             <dd>{{ form.date.errors }}</dd>
+        </dl>
+		<dl>
+            <dt> Address : </dt>
+            <dd>{{ form.address }}</dd>
+            <!--<dd>{{ form.address.errors }}</dd>-->
         </dl>
         <br>
 		<br>
@@ -86,7 +105,7 @@
     <td><a href="{% url "food.views.viewEvent" event_id=event.pk %}">See Event</a></td>
 {% endfor %}
 </ul>
-<form id="searchEvents" action="{% url "food.views.searchEvents" %}" method="post" class="niceform" novalidate>{% csrf_token %}
+<form id="searchEvents" action="{% url food.views.searchEvents %}" method="post" class="niceform" novalidate>{% csrf_token %}
     <dl>
         <dd></dd>
         <dd>
@@ -96,6 +115,8 @@
         </dd>
     </dl>
 </form>
+</div>
+<div id="map_canvas">
 </div>
 </body>
 </html>
