--- a/food/templates/searchEventsResults.html
+++ b/food/templates/searchEventsResults.html
@@ -34,14 +34,14 @@
     </section>
 </div>
 <div class = "welcomeHeader">
-<h2> Hello {{ firstname }} {{ lastname }}! Welcome to the Fooding Dashboard </h2>
+<h2> Hello {{ firstname }} {{ lastname }}! These are the events around you! </h2>
 </div>
-<div class ="currentEvents">
+<div class ="showCurrentEvents">
 <p> Here are some Current Events : </p>
 <ul>
 {% for event in outputEvents %}
     <li>on {{ event.dateOfEvent }} : {{ event.title }} - {{event.description}}</li>
-    <td><a href="{% url "food.views.viewEvent" event_id=event.pk %}">See Event</a></td>
+    <td><a href="{% url food.views.viewEvent event_id=event.pk %}">See Event</a></td>
 {% endfor %}
 </ul>
 </div>
