--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -177,6 +177,39 @@ font: italic 1.1em/2.2 georgia;
 text-align: left;
 }
 
+.currentEvents {
+position:absolute;
+top: 60%;
+left: 60%;
+width: 35%;
+}
+.currentEvents p {
+font: italic 1.1em/2.2 georgia; 
+text-align: left;
+}
+
+.showCurrentEvents {
+position:absolute;
+top: 25%;
+left: 20%;
+width: 35%;
+}
+.showCurrentEvents p {
+font: italic 1.1em/2.2 georgia; 
+text-align: left;
+}
+
+.viewEvent {
+position:absolute;
+top: 25%;
+left: 20%;
+width: 35%;
+}
+.viewEvent p {
+font: italic 1.1em/2.2 georgia; 
+text-align: left;
+}
+
 .welcomeHeader {
 position:absolute;
 top: 15%;
@@ -445,3 +478,10 @@ background: url('/site_media/img/facebook.png') no-repeat;
 	position:relative;
 	top:1px;
 }
+
+#map_canvas{
+		margin-top:20%;
+		margin-left:10%;
+        width: 500px;
+        height: 400px;
+      }
