--- a/food/templates/viewEvent.html
+++ b/food/templates/viewEvent.html
@@ -16,7 +16,6 @@
           changeYear: true,
           yearRange: "2014:2099",
           // You can put more options here.
-
         });
       });
     </script>
@@ -28,6 +27,9 @@
             <h1></h1>
             <div class="user_panel">
                 <a href="/logout/">Logout</a>
+				<br>
+				<br>
+				<a href="/insertview/">Home</a>
             </div>
         </header>
         </div>
@@ -48,7 +50,9 @@
     <td>Participants: {{guest}}</td><br>
 {% endfor %}
 <td><a href="{% url food.views.participateInEvents event_id=event.pk %}">Participate</a></td>
-
+{% if event.chef.id == userId %}
+	<td><a href="{% url food.views.deleteEvent event_id=event.pk %}">Delete</a></td>
+{% endif %} 
 </ul>
 </div>
 </body>
