--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -155,11 +155,24 @@ header {
 	text-align: center;
 	}
 	
+.dashboardMenu
+{
+margin-left:20%;
+margin-top:6%;
+}
+	
 .createEvent {
-position:absolute;
-top: 25%;
-left: 50%;
+float:left;
+margin-top:-18%;
+margin-left: 50%;
 width: 35%;
+border-style:solid;
+border-width:1px;
+padding-right:1%;
+padding-left:1%;
+padding-top:1%;
+padding-bottom:1%;
+position:absolute;
 }
 .createEvent p {
 font: italic 1.1em/2.2 georgia; 
@@ -178,10 +191,17 @@ text-align: right;
 }
 
 .displayEvents {
-position:absolute;
-top: 25%;
-left: 10%;
+position:relative;
+margin-top: 2%;
+margin-left: 10%;
 width: 35%;
+border-style:solid;
+border-width:1px;
+overflow:scroll;
+padding-right:1%;
+padding-left:1%;
+padding-top:1%;
+padding-bottom:1%;
 }
 .displayEvents p {
 font: italic 1.1em/2.2 georgia; 
@@ -223,7 +243,7 @@ text-align: left;
 
 .welcomeHeader {
 position:absolute;
-top: 15%;
+top: 12%;
 width: 100%;
 }
 .welcomeHeader p {
@@ -490,4 +510,16 @@ background: url('/site_media/img/facebook.png') no-repeat;
 	top:1px;
 }
 
-#map { height: 20%; width: 20%; position: absolute; margin-top:20%; margin-left:10%;}
+#map { 
+	height: 23%; 
+	width: 23%; 
+	position:relative; 
+	margin-top:2%; 
+	margin-left:10%;
+	border-style:solid;
+	border-width:1px;
+}
+
+.show_hide {
+    display:none;
+}
